--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <h1>Welcome to HB Graphics</h1>
   <p>Choose a page:</p>
   <ul>
-    <li><a href="file 1.html">Page 1</a></li>
-    <li><a href="2html.html">Page 2</a></li>
-    <li><a href="3html.html">Page 3</a></li>
-    <li><a href="4html.html">Page 4</a></li>
+    <li><a href="file 1.html">HOME PAGE</a></li>
+    <li><a href="2html.html">Our Services</a></li>
+    <li><a href="3html.html">Our Portfolio</a></li>
+    <li><a href="4html.html">Contact Us</a></li>
   </ul>
-  <img src="logo.png.jpeg" alt="HB Graphics Logo" width="500">
+  <img src="logo.png.jpeg" alt="HB Graphics Logo" width="1500">
 </body>
 </html>
