Updated page names and links on homepage

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>HB Graphics</title>
   <style>
-    /* Reset some default styles */
     body {
       font-family: Arial, sans-serif;
       background: #f9f9f9;
@@ -29,21 +28,21 @@
     }
     nav a {
       display: inline-block;
-      background: linear-gradient(145deg, #f4c430, #cca300); /* yellow gradient */
-      color: #0b2545; /* navy blue text */
+      background: linear-gradient(145deg, #d62828, #a91f1f); /* red gradient */
+      color: white;
       padding: 15px 30px;
       margin: 10px 15px;
       border-radius: 10px;
       font-size: 18px;
       font-weight: 700;
       text-decoration: none;
-      box-shadow: 5px 5px 10px #b38f00, -5px -5px 10px #fff263;
+      box-shadow: 5px 5px 10px #8e1a1a, -5px -5px 10px #ef3c3c;
       transition: transform 0.2s ease, box-shadow 0.2s ease;
       user-select: none;
     }
     nav a:hover {
       transform: translateY(-5px);
-      box-shadow: 8px 8px 15px #b38f00, -8px -8px 15px #fff263;
+      box-shadow: 8px 8px 15px #8e1a1a, -8px -8px 15px #ef3c3c;
     }
     img {
       max-width: 100%;
