--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       border-radius: 20px;
       box-shadow: 0 20px 40px rgba(0, 0, 0, 0.5);
       text-align: center;
-      max-width: 600px;
+      max-width: 700px;
       width: 100%;
       backdrop-filter: blur(8px);
     }
@@ -60,9 +60,10 @@
       font-size: 1.1rem;
       font-weight: 700;
       text-decoration: none;
+      /* White glow shadow instead of red shadow */
       box-shadow:
-        4px 4px 10px #8e1a1a,
-        -4px -4px 10px #ef3c3c;
+        0 0 8px 2px rgba(255 255 255 / 0.9),
+        0 0 20px 4px rgba(255 255 255 / 0.5);
       transition:
         transform 0.25s ease,
         box-shadow 0.25s ease,
@@ -89,35 +90,77 @@
     }
     nav a:hover {
       transform: translateY(-7px) scale(1.1);
+      /* Stronger white glow on hover */
       box-shadow:
-        6px 6px 15px #8e1a1a,
-        -6px -6px 15px #ef3c3c;
+        0 0 15px 5px rgba(255 255 255 / 1),
+        0 0 30px 8px rgba(255 255 255 / 0.8);
       filter: brightness(1.1);
       z-index: 2;
     }
-    img {
+    img.logo {
       max-width: 70%;
       border-radius: 20px;
       box-shadow: 0 15px 30px rgba(0, 0, 0, 0.7);
       transition: transform 0.3s ease;
-      margin: 0 auto;
+      margin: 0 auto 40px auto;
       display: block;
     }
-    img:hover {
+    img.logo:hover {
       transform: scale(1.05) rotate(-2deg);
     }
-    @media (max-width: 480px) {
-      .container {
-        padding: 30px 20px;
+
+    /* Services grow section */
+    .services {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
+      gap: 30px;
+      margin-top: 30px;
+    }
+    .service-item {
+      background: rgba(255 255 255 / 0.15);
+      border-radius: 18px;
+      padding: 25px;
+      width: 150px;
+      box-shadow: 0 8px 15px rgba(0,0,0,0.3);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      cursor: default;
+      color: white;
+      user-select: none;
+      text-align: center;
+    }
+    .service-item:hover {
+      transform: scale(1.15);
+      box-shadow: 0 15px 30px rgba(255 255 255, 0.8);
+      background: rgba(255 255 255 / 0.3);
+      color: #d62828;
+      font-weight: 700;
+    }
+    .service-icon {
+      width: 60px;
+      height: 60px;
+      margin-bottom: 15px;
+      fill: white;
+      transition: fill 0.3s ease;
+    }
+    .service-item:hover .service-icon {
+      fill: #d62828;
+    }
+    .service-title {
+      font-weight: 600;
+      font-size: 1.1rem;
+    }
+
+    @media (max-width: 640px) {
+      .services {
+        flex-direction: column;
+        align-items: center;
       }
-      h1 {
-        font-size: 2.2rem;
-      }
-      nav a {
-        padding: 12px 25px;
-        font-size: 1rem;
+      .service-item {
+        width: 70%;
       }
     }
+
   </style>
 </head>
 <body>
@@ -130,7 +173,34 @@
       <a href="3html.html">Our Portfolio</a>
       <a href="4html.html">Contact Us</a>
     </nav>
-    <img src="logo.png.jpeg" alt="HB Graphics Logo" />
+    <img src="logo.png.jpeg" alt="HB Graphics Logo" class="logo" />
+
+    <section class="services" aria-label="Our Services">
+      <div class="service-item" tabindex="0">
+        <svg class="service-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-hidden="true" >
+          <path d="M48 10H16a6 6 0 0 0-6 6v32a6 6 0 0 0 6 6h32a6 6 0 0 0 6-6V16a6 6 0 0 0-6-6Zm-16 38a4 4 0 1 1 0-8 4 4 0 0 1 0 8Zm20-6H16V16h32Z"/>
+        </svg>
+        <div class="service-title">Graphic Design</div>
+      </div>
+      <div class="service-item" tabindex="0">
+        <svg class="service-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-hidden="true" >
+          <path d="M32 10l-6 12h12Zm-4 24a4 4 0 1 0 8 0 4 4 0 0 0-8 0Zm20-20v24a6 6 0 0 1-6 6H18a6 6 0 0 1-6-6V14Z"/>
+        </svg>
+        <div class="service-title">Embroidery</div>
+      </div>
+      <div class="service-item" tabindex="0">
+        <svg class="service-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-hidden="true" >
+          <path d="M52 12H12a4 4 0 0 0-4 4v32a4 4 0 0 0 4 4h40a4 4 0 0 0 4-4V16a4 4 0 0 0-4-4Zm-16 34a8 8 0 1 1 0-16 8 8 0 0 1 0 16Z"/>
+        </svg>
+        <div class="service-title">Digital Marketing</div>
+      </div>
+      <div class="service-item" tabindex="0">
+        <svg class="service-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-hidden="true" >
+          <path d="M44 12H20a4 4 0 0 0-4 4v28a4 4 0 0 0 4 4h24a4 4 0 0 0 4-4V16a4 4 0 0 0-4-4Zm-6 30a6 6 0 1 1 0-12 6 6 0 0 1 0 12Z"/>
+        </svg>
+        <div class="service-title">Facebook Management</div>
+      </div>
+    </section>
   </div>
 </body>
 </html>
