--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     body {
       margin: 0;
       font-family: 'Poppins', sans-serif;
-      background: #f7f7f7; /* Soft light gray */
+      background: #f7f7f7;
       color: #222;
       display: flex;
       justify-content: center;
@@ -29,20 +29,19 @@
       text-align: center;
       max-width: 720px;
       width: 100%;
-      /* No backdrop filter needed on white */
     }
     h1 {
       margin-bottom: 15px;
       font-weight: 700;
       font-size: 3rem;
-      color: #d62828; /* red */
+      color: #d62828;
       text-shadow: 1px 1px 2px rgba(214, 40, 40, 0.3);
     }
     p {
-      font-size: 1.3rem;
-      font-weight: 600;
+      font-size: 1.6rem; /* bigger */
+      font-weight: 700; /* bolder */
       margin-bottom: 40px;
-      color: #555;
+      color: #444; /* darker */
     }
     nav {
       display: flex;
@@ -96,13 +95,13 @@
       z-index: 2;
     }
     img.logo {
-      max-width: 300px; /* Adjusted smaller so it fits nicely */
+      max-width: 400px; /* bigger */
       border-radius: 12px;
       box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
       transition: transform 0.3s ease;
       margin: 0 auto 40px auto;
       display: block;
-      background: white; /* ensure white behind logo if transparent */
+      background: white;
       padding: 10px;
     }
     img.logo:hover {
@@ -209,13 +208,4 @@
       </div>
       <div class="service-item" tabindex="0">
         <svg class="service-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-hidden="true" >
-          <circle cx="32" cy="32" r="28" stroke="#d62828" stroke-width="4" fill="none"/>
-          <path d="M20 44l24-24" stroke="#d62828" stroke-width="4" />
-          <path d="M44 44L20 20" stroke="#d62828" stroke-width="4" />
-        </svg>
-        <div class="service-title">Branding Services</div>
-      </div>
-    </section>
-  </div>
-</body>
-</html>
+          <circle cx="32" cy="32" r
